2005-01-16  Chris Larson <kergoth@handhelds.org>

	* configure.ac: Fix to work with automake 1.9.x.

2004-02-03  Jim Gettys  <jg@freedesktop.org>

	* AUTHORS: Add AUTHORS to file

2004-01-15  Daniel Stone  <daniel@fooishbar.org>
	* Tag release 1.0 for first freedesktop.org clientside lib release.

2003-11-03  Keith Packard  <keithp@keithp.com>

	* protocol:
	Mark document revision
	Credit Havoc the Tolerant for his earlier design and implementation

2003-10-23  Keith Packard  <keithp@keithp.com>

	* COPYING:
	* INSTALL:
	* Makefile.am:
	* README:
	* autogen.sh:
	* configure.ac:
	* damageext.pc.in:
	* damageproto.h:
	* damagewire.h:
	* protocol:
	Initial working version -- added DamageDestroy and damage objects

2003-10-18	Keith Packard	<keithp@keithp.com

	Initial protocol description added