@@ -24,13 +24,12 @@ dnl
 dnl Process this file with autoconf to create configure.
 
 AC_PREREQ([2.57])
-AC_INIT([damageext], [1.0], [keithp@keithp.com], damageext)
-AC_CONFIG_AUX_DIR(.)
-AM_INIT_AUTOMAKE([dist-bzip2])
+AC_INIT([DamageProto], [1.0.3], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg])
+AM_INIT_AUTOMAKE([foreign dist-bzip2])
 AM_MAINTAINER_MODE
 
-PKG_CHECK_MODULES(FIXESEXT, fixesext)
+XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile
-           damageext.pc])
+           damageproto.pc])
 
