@@ -3,7 +3,7 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: DamageExt
-Description: X Damage extension headers
+Name: DamageProto
+Description: Damage extension headers
 Version: @PACKAGE_VERSION@
-Cflags: -I${includedir} @FIXESEXT_CFLAGS@
+Cflags: -I${includedir}
