@@ -1,3 +1,8 @@
+2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
+
+	* configure.ac:
+	Update package version for X11R7 release.
+
 2005-01-16  Chris Larson <kergoth@handhelds.org>
 
 	* configure.ac: Fix to work with automake 1.9.x.
